# jam

./: .gitattributes  .gitignore  LICENSE  README.md  default_config.json  install.sh  jam.sh  main.py  pyproject.toml
.github/workflows/: bump-version.yml  release.yml
adapters/: SystemUsers.py  system_users.py  systems.py  systemusers.py
api/: applications.py  groups.py  systems.py  users.py
cli/: config.py  input.py  output.py  update.py
cli/application/: commands.py  presenter.py
cli/application/group/: commands.py
cli/group/: commands.py  presenter.py
cli/group/member/: commands.py  exceptions.py  presenter.py
cli/groups/: commands.py  presenter.py
cli/system/: commands.py  presenter.py
cli/systems/: commands.py  presenter.py
cli/user/: commands.py
cli/users/: commands.py  presenter.py
core/: auth.py  client.py  config.py  progress.py  settings.py
models/: SystemUsers.py  Systems.py  application.py  group.py  system.py  user.py
services/: system_users.py  systems.py
